add temperature filtering to frontend; add demo video to README

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -52,7 +52,7 @@
       <h3>Simulation Parameters</h3>
       <form id="param-form">
          <label for="min-voxel-temperature">Min Voxel Temperature (0-255):</label>
-         <input type="number" id="min-voxel-temperature" min="0" max="255" step="1">
+         <input type="number" id="min-voxel-temperature" min="0" max="255" step="1" value="32">
 
          <label>Nozzle Origin (x, y, z):</label><br>
          <input type="number" step="0.01" id="nozzle-origin-x" value="0.0"><br>
